# fuzzy-bools

./: CMakeLists.txt  LICENSE.md  README.md  package-lock.json  package.json
demo/: fuzzy-bools-test.js  fuzzy-bools-test.wasm  fuzzy-bools.js  fuzzy-bools.wasm  index.html  test.js
src/: aabb.h  bvh.h  clip-mesh.h  eps.h  fuzzy-bools.h  geometry.h  intersect-ray-tri.h  is-inside-mesh.h  loop-finder.h  main.cpp  math.h  obj-exporter.h  shared-position.h  svg.h  util.h
